// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarHeader Component should render 01 / 02 2018 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    01 / 02 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render 1 / 2 18 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    1 / 2 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render 1st / 2nd 18 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    1st / 2nd 18
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render December 2017 / January 2018 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    December 2017 / January 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render December 2017 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    December 2017
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render Jan / Feb 2018 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    Jan / Feb 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render January / February 2018 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    January / February 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render in Comic Sans 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        Object {
          "fontFamily": "ComicSans",
        },
      ]
    }
  >
    December 2017 / January 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render in a red color 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    December 2017 / January 2018
  </Text>
</TouchableOpacity>
`;

exports[`CalendarHeader Component should render without issues 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "fontWeight": "bold",
          "textAlign": "center",
        },
        Object {
          "fontSize": undefined,
        },
        undefined,
      ]
    }
  >
    December 2017
  </Text>
</TouchableOpacity>
`;
